commit with adding configuration in pom.xml to generate docker image

--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -59,6 +59,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<image>
+						<name>shantanu7088/${project.artifactId}:v1</name>
+					</image>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
