commit with three diff configuration properties techniques

--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
+#to secure properties we use environment to store properties
+
+
+
 
