--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -14,4 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 
+accounts.msg=Welcome to loans service
+accounts.contactDetails.name=shantanu
+accounts.contactDetails.email=shantanu@gmail.com
+accounts.onCallSupport=9999009900,9879787899
 
