--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -51,6 +51,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -59,9 +69,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<image>
+					<!--<image>
 						<name>shantanu7088/${project.artifactId}:v1</name>
-					</image>
+					</image>-->
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -69,6 +79,16 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<to>
+						<image>shantanu7088/${project.artifactId}:v1</image>
+					</to>
+					</configuration>
 			</plugin>
 		</plugins>
 	</build>
