commit with spring profiles for all the microservices

--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=loans
 
-
+spring.config.import=application-prod.properties,application-qa.properties
 
 server.port=8081
+
+
+spring.profiles.active=prod
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
@@ -14,8 +17,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 
-accounts.msg=Welcome to loans service
-accounts.contactDetails.name=shantanu
-accounts.contactDetails.email=shantanu@gmail.com
-accounts.onCallSupport=9999009900,9879787899
+#accounts.msg=Welcome to loans service
+#accounts.contactDetails.name=shantanu
+#accounts.contactDetails.email=shantanu@gmail.com
+#accounts.onCallSupport=9999009900,9879787899
 
