--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.application.name=Account
 
+
+
+spring.config.import=application-prod.properties,application-qa.properties
+
+
 server.port=8080
+
+
+spring.profiles.active=qa
+
+
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
