commit with config server

--- a/Account/src/main/resources/application-prod.properties
+++ b/Account/src/main/resources/application-prod.properties
@@ -1,18 +1,18 @@
-spring.config.activate.on-profile=prod
-
-server.port=8080
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-
-
-accounts.msg=Welcome to accounts_prod service
-accounts.contactDetails.name=shantanu_cards_prod
-accounts.contactDetails.email=shantanu_cards_prod@gmail.com
-accounts.onCallSupport=9999009900,9879787899
+#spring.config.activate.on-profile=prod
+#
+#server.port=8080
+#
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.h2.console.enabled=true
+#
+#
+#accounts.msg=Welcome to accounts_prod service
+#accounts.contactDetails.name=shantanu_cards_prod
+#accounts.contactDetails.email=shantanu_cards_prod@gmail.com
+#accounts.onCallSupport=9999009900,9879787899
