--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.application.name=Account
+spring.application.name=accounts
+
+spring.profiles.active=prod
 
 
 
-spring.config.import=application-prod.properties,application-qa.properties
+#spring.config.import=application-prod.properties,application-qa.properties
 
 
 server.port=8080
 
-
-spring.profiles.active=qa
 
 
 
@@ -22,7 +22,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 
-build.version="1.0"
+#build.version="1.0"
+
+#commmented all properties of prod and qa because now fetching the properties of both the profiles from config server 
 
 
 
