commit with all microservices connected with configserver

--- a/ConfigServer/src/main/resources/config/cards-qa.properties
+++ b/ConfigServer/src/main/resources/config/cards-qa.properties
@@ -13,8 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 
-accounts.msg=Welcome to cards service
-accounts.contactDetails.name=shantanu_qa_cards
-accounts.contactDetails.email=shantanu_qa_cards@gmail.com
-accounts.onCallSupport=9999009900,9879787899
+cards.msg=Welcome to cards service
+cards.contactDetails.name=shantanu_qa_cards
+cards.contactDetails.email=shantanu_qa_cards@gmail.com
+cards.onCallSupport=9999009900,9879787899
 
