--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=accounts
 
-spring.profiles.active=prod
+
+spring.profiles.active=qa
 
 
-
-#spring.config.import=application-prod.properties,application-qa.properties
+spring.config.import=optional:configserver:http://localhost:8071/
+spring.cloud.config.uri=http://localhost:8071
 
 
 server.port=8080
+
 
 
 
