--- a/ConfigServer/src/main/resources/config/accounts.properties
+++ b/ConfigServer/src/main/resources/config/accounts.properties
@@ -1,26 +1,11 @@
-spring.application.name=Account
+spring.application.name=accounts
 
 
-
+spring.profiles.active=qa
 
 server.port=8080
 
 
-
-
-
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-
-
-build.version="1.0"
 
 
 
