--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.3</version>
+		<version>3.2.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cards</groupId>
@@ -17,6 +17,7 @@
 	<description>Microservice for Cards</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2023.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,7 +57,36 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		 <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+		 <dependency>
+		 	<groupId>org.springframework.boot</groupId>
+		 	<artifactId>
+		 		spring-boot-configuration-processor
+		 	</artifactId>
+		 	<optional>true</optional>
+		 </dependency>
+		 <dependency>
+		 	<groupId>org.springframework.boot</groupId>
+		 	<artifactId>
+		 		spring-boot-configuration-processor
+		 	</artifactId>
+		 	<optional>true</optional>
+		 </dependency>
 	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
