--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=Cards
+spring.application.name=cards
+
+spring.config.import=optional:configserver:http://localhost:8071/
 
 spring.profiles.active=qa
 
