--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=loans
 
-spring.config.import=application-prod.properties,application-qa.properties
+spring.config.import=optional:configserver:http://localhost:8071/
 
 server.port=8081
 
