commit with few changes of webhook

--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -24,6 +24,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
 
+#this is used to get the latest details from config server with out restarting the service just need to call http://localhost:8080/actuator/refresh
+#this advantage of this is that we have to call referesh api for every microservice 
+#to overcome this we use spring cloud bus and rabbit mq
+management.endpoints.web.exposure.include=*
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 #build.version="1.0"
 
 #commmented all properties of prod and qa because now fetching the properties of both the profiles from config server 
