--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,8 +1,30 @@
 spring.application.name=ConfigServer
 
 #when we are using class path like creating config folder in resources then we use profile as native 
-spring.profiles.active=native
-
-spring.cloud.config.server.native.search-locations=classpath:/config
-
+#for getting properties from git we use git 
+spring.profiles.active=git
 server.port=8071
+
+#this should also be commented for git 
+#spring.cloud.config.server.native.search-locations=classpath:/config
+
+
+#these all properties are written for connecting to git repo 
+spring.cloud.config.server.git.uri=https://github.com/Shantanu8807/Microservices-Config-Properties.git
+spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.timeout=5
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.force-pull=true
+
+encrypt.key=asdasdvsr12312sdvafaw123edas#$@%@~@U$EUHGDFAS#!@$WREDGVXDASQ@$#TEGDSFSAW@#!$#TERHGDFVCAFGYU&^^
+
+management.endpoints.web.exposure.include=*
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+#these user id and passwords are general for all when installed first 
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
+
