--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -16,6 +16,23 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
+management.endpoints.web.exposure.include=*
+
+
+
+#rabbitmq and spring cloud bus will use single api for refreshing  fro all the microservices the config properties  we have an api http://localhost:8080/actuator/busReferesh
+
+
+##more over to overcome this we have <dependency>
+#			<groupId>org.springframework.cloud</groupId>
+#			<artifactId>spring-cloud-config-monitor</artifactId>
+#		</dependency>  this dependency create an api endpoint this dependency is included in config server only for this we have to create git hub webhook 
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 
 #accounts.msg=Welcome to loans service
 #accounts.contactDetails.name=shantanu
