--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -15,6 +15,15 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 
+
+management.endpoints.web.exposure.include=*
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 #to secure properties we use environment to store properties
 
 
