commit with eureka server and feign client

--- a/cards/src/main/resources/application.properties
+++ b/cards/src/main/resources/application.properties
@@ -19,6 +19,21 @@ spring.h2.console.enabled=true
 management.endpoints.web.exposure.include=*
 
 
+
+#connecting with eureka server 
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
+
+info.app.name=cards
+info.app.description=cards microservice
+info.app.version=1.0.0
+management.info.env.enabled=true
+management.endpoint.shutdown.enabled=true
+
+endpoints.shutdown.enabled=true
+
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
