--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -12,7 +12,19 @@ server.port=8080
 
 
 
+#connecting with eureka server 
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
 
+info.app.name=accounts
+info.app.description=account microservice
+info.app.version=1.0.0
+management.info.env.enabled=true
+management.endpoint.shutdown.enabled=true
+
+endpoints.shutdown.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
