--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -18,7 +18,19 @@ spring.h2.console.enabled=true
 
 management.endpoints.web.exposure.include=*
 
+#connecting with eureka server 
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8070/eureka/
 
+info.app.name=loans
+info.app.description=loans microservice
+info.app.version=1.0.0
+management.info.env.enabled=true
+management.endpoint.shutdown.enabled=true
+
+endpoints.shutdown.enabled=true
 
 #rabbitmq and spring cloud bus will use single api for refreshing  fro all the microservices the config properties  we have an api http://localhost:8080/actuator/busReferesh
 
