commit with updated docker compose file

--- a/docker-compose-files/default/common-config.yml
+++ b/docker-compose-files/default/common-config.yml
@@ -20,9 +20,12 @@ services:
     depends_on:
       configserver:
         condition: service_healthy
+      eurekaserver:
+        condition: healthy
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://configserver:8071/"
       SPRING_PROFILES_ACTIVE: default
+      EUREKA_CLINET_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka/
 networks:
   shantanu:
     driver: bridge
