--- a/EurekaServer/pom.xml
+++ b/EurekaServer/pom.xml
@@ -74,6 +74,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
+				<configuration>
+					<to>
+						<image>shantanu7088/${project.artifactId}:v2</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
