--- a/docker-compose-files/prod/docker-compose.yml
+++ b/docker-compose-files/prod/docker-compose.yml
@@ -1,22 +1,41 @@
 services:
-  rabbit:
-    image: rabbitmq:3.12-management
-    hostname: rabbitmq
+#  rabbit:
+#    image: rabbitmq:3.12-management
+#    hostname: rabbitmq
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
+#    healthcheck:
+#      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+#      start_period: 5s
+#    extends:
+#      file: common-config.yml
+#      service: network-deploy-service
+  eurekaserver:
+    image: "shantanu7088/eurekaserver:v2"
+    container_name: eurekaserver-ms
     ports:
-      - "5672:5672"
-      - "15672:15672"
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 5s
+      - "8070:8070"
+    depends_on:
+      configserver:
+        condition: service_healthy
     extends:
       file: common-config.yml
       service: network-deploy-service
+    healthcheck:
+      test: "curl --fail --silent http://localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
 
   configserver:
-    image: "shantanu7088/configserver:v1"
+    image: "shantanu7088/configserver:v2"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -34,7 +53,7 @@ services:
       start_period: 10s
 
   accounts:
-    image: "shantanu7088/accounts:v1"
+    image: "shantanu7088/accounts:v2"
     container_name: accounts-ms
     ports:
       - "8080:8080"
@@ -64,7 +83,7 @@ services:
       SPRING_APPLICATION_NAME: "loans"
 
   cards:
-    image: "shantanu7088/cards:v1"
+    image: "shantanu7088/cards:v2"
     container_name: cards-ms
     ports:
       - "8082:8082"
