commit with tracing requests

--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -52,6 +52,7 @@ spring.rabbitmq.password=guest
 #commmented all properties of prod and qa because now fetching the properties of both the profiles from config server 
 
 
+logging.level.com.account=debug
 
 
 
