--- a/loans/src/main/resources/application.properties
+++ b/loans/src/main/resources/application.properties
@@ -46,6 +46,10 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
+
+logging.level.com.loan=debug
+
+
 #accounts.msg=Welcome to loans service
 #accounts.contactDetails.name=shantanu
 #accounts.contactDetails.email=shantanu@gmail.com
