--- a/GatewayServer/src/main/resources/application.properties
+++ b/GatewayServer/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 management.endpoints.web.exposure.include=*
 management.endpoint.gateway.enabled=true
+
+
+logging.level.com.gatewayserver=debug
