commit with rate limiter redis and retry

--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -55,4 +55,43 @@ spring.rabbitmq.password=guest
 logging.level.com.account=debug
 
 
+#this is to enable circuit breaking at service level 
+spring.cloud.openfeign.circuitbreaker.enabled=true
 
+
+
+#for retry mechanism we need properties like 
+resilience4j.retry.configs.default.max-attempts=3
+resilience4j.retry.configs.default.wait-duration=500ms
+
+#retry only occurs for this exceptions
+resilience4j.retry.configs.default.retry-exceptions=java.io.IOException,java.util.concurrent.TimeoutException
+
+
+#retry will not happen for this exceptions
+resilience4j.retry.configs.default.ignore-exceptions=java.lang.IllegalArgumentException
+
+# Exponential backoff configuration
+resilience4j.retry.configs.default.enable-exponential-backoff=true
+resilience4j.retry.configs.default.exponential-backoff-multiplier=2.0
+resilience4j.retry.configs.default.exponential-max-wait-duration=2s
+
+
+#for redis properties 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.connect-timeout=2s
+
+#we can use apache bechmark for sending multiple request to server 
+
+
+# Redis Rate Limiter configuration
+# Default rate limiter configuration
+resilience4j.ratelimiter.configs.default.timeout-duration=5s
+resilience4j.ratelimiter.configs.default.limit-for-period=10
+resilience4j.ratelimiter.configs.default.limit-refresh-period=1s
+
+# Instance-specific rate limiter configuration
+resilience4j.ratelimiter.instances.myService.timeout-duration=5s
+resilience4j.ratelimiter.instances.myService.limit-for-period=10
+resilience4j.ratelimiter.instances.myService.limit-refresh-period=1s
