commmit with rabbitmq and message service

--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -41,6 +41,12 @@ spring.h2.console.enabled=true
 #to overcome this we use spring cloud bus and rabbit mq
 management.endpoints.web.exposure.include=*
 
+spring.cloud.stream.bindings.sendCommunication-out-0=output
+spring.cloud.stream.bindings.sendCommunication-out-0.destination=send-communication
+spring.cloud.function.definition=updateCommunication
+spring.cloud.stream.bindings.updateCommunication-in-0=input
+spring.cloud.stream.bindings.updateCommunication-in-0.destination=communication-sent
+
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
