--- a/Account/src/main/resources/application.properties
+++ b/Account/src/main/resources/application.properties
@@ -41,17 +41,21 @@ spring.h2.console.enabled=true
 #to overcome this we use spring cloud bus and rabbit mq
 management.endpoints.web.exposure.include=*
 
+
+#RABBITMQ related properties
+
+#these properties will remane same for rabbit as well as kafka 
 spring.cloud.stream.bindings.sendCommunication-out-0=output
 spring.cloud.stream.bindings.sendCommunication-out-0.destination=send-communication
 spring.cloud.function.definition=updateCommunication
 spring.cloud.stream.bindings.updateCommunication-in-0=input
 spring.cloud.stream.bindings.updateCommunication-in-0.destination=communication-sent
-
-
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+#
+#
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 
 #build.version="1.0"
 
@@ -101,3 +105,10 @@ resilience4j.ratelimiter.configs.default.limit-refresh-period=1s
 resilience4j.ratelimiter.instances.myService.timeout-duration=5s
 resilience4j.ratelimiter.instances.myService.limit-for-period=10
 resilience4j.ratelimiter.instances.myService.limit-refresh-period=1s
+
+
+
+
+
+#KAFKA
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
