--- a/MessageService/src/main/resources/application.properties
+++ b/MessageService/src/main/resources/application.properties
@@ -3,7 +3,11 @@ spring.application.name=MessageService
 
 server.port=9010
 
-#we are composing these two functions as a single unit then we call the API as /emailsms and both the function will run 
+
+#these are all properties used for rabbitmq commenting this to make new changes related to kafka
+##we are composing these two functions as a single unit then we call the API as /emailsms and both the function will run 
+
+#these properties will remane same for both rabbit and kafka as it is advantage of spring cloud streams
 spring.cloud.function.definition=email|sms
 
 spring.cloud.stream.function.bindings.emailsms-in-0=input
@@ -13,11 +17,15 @@ spring.cloud.stream.bindings.emailsms-in-0.group=${spring.application.name}
 
 spring.cloud.stream.bindings.emailsms-out-0=output
 spring.cloud.stream.bindings.emailsms-out-0.destination=communication-sent
+#
+#
+##Connection properties for rabbitmq
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#spring.rabbitmq.connection-timeout=10s
 
 
-#Connection properties for rabbitmq
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-spring.rabbitmq.connection-timeout=10s
+#KAFKA
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
